--- a/JDBCPrj/.classpath
+++ b/JDBCPrj/.classpath
@@ -6,12 +6,12 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="T:/Programming/Tools/JDBC/ojdbc10.jar">
+	<classpathentry kind="lib" path="D:/Programming/Tools/JDBC/ojdbc10.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="T:/Programming/Tools/JDBC/orai18n.jar">
+	<classpathentry kind="lib" path="D:/Programming/Tools/JDBC/orai18n.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
